--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
 /* 웹사이트 폰트 적용 */
 body {
     font-family: "Nanum Gothic", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     font-weight: bold;
+    font-style: normal;
 }
 
 /* 헤더 */
@@ -15,26 +14,36 @@ body {
 /* 헤더 로고 이미지 */
 .nav-container img {
     width: 3%;
-    height: 3%;
+    height: auto;
+    /* height를 auto로 변경하여 비율을 유지 */
     margin: 1% 2% 1% 3%;
 }
 
 /* 배너 */
-.banner {
-    width: 100%;
+.loop-cont {
     overflow: hidden;
-    position: relative;
-    height: 628px;
-    margin-top: 10px;
-  }
-  
-  /* 배너 이미지 */
-  .banner img {
-    position: absolute;
-    top: 0;
-    left: 0;
+    /* 배너가 컨테이너를 벗어나지 않도록 숨김 */
     width: 100%;
-    height: auto;
-    opacity: 0.7;
-    transition: opacity 1s ease-in-out;
-  }
+}
+
+.banner {
+    display: flex;
+    animation: banner-animation 10s linear infinite;
+}
+
+/* 배너 이미지 항목 */
+.banner-list {
+    background-color: lightblue;
+    margin-right: 10px;
+    flex-shrink: 0;
+}
+
+/* 배너 애니메이션 */
+@keyframes banner-animation {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-100% * 3)); /* 이미지 너비와 개수에 맞게 조정 */
+    }
+}
