로고 이미지 변경

--- a/index.css
+++ b/index.css
@@ -11,12 +11,12 @@ body {
     align-items: center;
 }
 
-/* 헤더 로고 이미지 */
-.nav-container img {
-    width: 3%;
+/* 헤더 로고 */
+.logo {
+    width: 10%;
     height: auto;
-    /* height를 auto로 변경하여 비율을 유지 */
     margin: 1% 2% 1% 3%;
+
 }
 
 /* 배너 */
