--- a/css/header.css
+++ b/css/header.css
@@ -67,3 +67,45 @@ a {
 a:visited {
     color: black;
 }
+
+/* 풋터 */
+.footer {
+    margin-top: 200px;
+    color: #000000;
+    text-align: center;
+    padding: 20px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    border: #000;
+    font-size: small;
+    margin-bottom: 2%;
+}
+
+/* 풋터 내용 */
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-content a {
+    color: #000000;
+    text-decoration: none;
+}
+
+.footer-content a:hover {
+    text-decoration: underline;
+}
+
+.footer-line {
+    width: 100%;
+    height: 1px;
+    margin-bottom: 1%;
+    margin-top: -10%;
+    background-color: rgb(77, 77, 77);
+}
+
+.footer img {
+    width: 3%;
+    margin-top: 1.5%;
+}
