--- a/css/context.css
+++ b/css/context.css
@@ -28,7 +28,8 @@
 }
 
 /* 타이틀 */
-#context-title {
+#context-title,
+#project-section {
     font-size: 35px;
     font-weight: bold;
     margin-bottom: 1%;
